--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,2 +1,60 @@
 ---
 # tasks file for ansible-portainer
+- name: Update APT cache
+  ansible.builtin.apt:
+    update_cache: true
+    cache_valid_time: 3600
+  when: ansible_os_family == "Debian"
+
+- name: Ensure required packages are installed
+  ansible.builtin.package:
+    name:
+      - ca-certificates
+      - curl
+      - gnupg
+    state: present
+
+- name: Ensure config files are present on remote
+  ansible.builtin.copy:
+    src: ./config/
+    dest: /root
+    mode: "0644"
+
+- name: Install Docker
+  ansible.builtin.include_tasks: docker.yml
+
+- name: Install Traefik container
+  ansible.builtin.include_tasks: traefik.yml
+  when: traefik_enabled
+
+- name: Install Portainer container
+  ansible.builtin.include_tasks: portainer.yml
+  when: portainer_enabled
+
+- name: Install Dashy container
+  ansible.builtin.include_tasks: dashy.yml
+  when: dashy_enabled
+
+- name: Install Cloudflare DDNS container
+  ansible.builtin.include_tasks: cloudflare-ddns.yml
+  when: cloudflare_ddns_enabled
+
+- name: Install InfluxDB container
+  ansible.builtin.include_tasks: influxdb.yml
+  when: influxdb_enabled
+
+- name: Install Grafana container
+  ansible.builtin.include_tasks: grafana.yml
+  when: grafana_enabled
+
+- name: Install Passbolt container
+  ansible.builtin.include_tasks: passbolt.yml
+  when: passbolt_enabled
+
+- name: Install Watchtower container
+  ansible.builtin.include_tasks: watchtower.yml
+  when: watchtower_enabled
+
+- name: Install Authelia container
+  ansible.builtin.include_tasks: authelia.yml
+  when: authelia_enabled
