begin of variables

--- a/tasks/cloudflare-ddns.yml
+++ b/tasks/cloudflare-ddns.yml
@@ -4,7 +4,7 @@
     name: cloudflare-ddns
     image: oznu/cloudflare-ddns:latest
     env:
-      API_KEY: "{{ cloudflare_api_key }}"
-      ZONE: "{{ root_domain }}"
+      API_KEY: "{{ portainer_cloudflare_api_key }}"
+      ZONE: "{{ portainer_root_domain }}"
       PROXIED: "true"
     restart_policy: unless-stopped
