--- a/tasks/influxdb.yml
+++ b/tasks/influxdb.yml
@@ -17,10 +17,10 @@
     env:
       DOCKER_INFLUXDB_INIT_MODE: setup
       DOCKER_INFLUXDB_INIT_USERNAME: root
-      DOCKER_INFLUXDB_INIT_PASSWORD: "{{ influxdb_password }}"
+      DOCKER_INFLUXDB_INIT_PASSWORD: "{{ portainer_influxdb.password }}"
       DOCKER_INFLUXDB_INIT_ORG: homelab
       DOCKER_INFLUXDB_INIT_BUCKET: proxmox
-      DOCKER_INFLUXDB_INIT_ADMIN_TOKEN: "{{ influxdb_secret }}"
+      DOCKER_INFLUXDB_INIT_ADMIN_TOKEN: "{{ portainer_influxdb.secret }}"
     volumes:
       - influxdb_data:/var/lib/influxdb2
       - influxdb_config:/etc/influxdb2
