--- a/tasks/authelia.yml
+++ b/tasks/authelia.yml
@@ -1,38 +1,38 @@
 ---
 - name: Ensure authelia config is on remote
   ansible.builtin.template:
-    src: ./templates/authelia-config.yaml.j2
+    src: authelia-config.yaml.j2
     dest: /root/authelia-config/configuration.yaml
     mode: "0644"
 
 - name: Ensure authelia user database is on remote
   ansible.builtin.template:
-    src: ./templates/authelia-user-database.yaml.j2
+    src: authelia-user-database.yaml.j2
     dest: /root/authelia-config/users_database.yaml
     mode: "0644"
 
 - name: Ensure authelia jwt secret is on remote
   copy:
     dest: /root/authelia-config/authelia_jwt_secret.key
-    content: "{{ authelia_jwt_secret }}"
+    content: "{{ portainer_authelia.jwt_secret }}"
     mode: "0600"
 
 - name: Ensure authelia session secret is on remote
   copy:
     dest: /root/authelia-config/authelia_session_secret.key
-    content: "{{ authelia_session_secret }}"
+    content: "{{ portainer_authelia.session_secret }}"
     mode: "0600"
 
 - name: Ensure authelia storage secret is on remote
   copy:
     dest: /root/authelia-config/authelia_storage_secret.key
-    content: "{{ authelia_storage_secret }}"
+    content: "{{ portainer_authelia.storage_secret }}"
     mode: "0600"
 
 - name: Ensure authelia smtp password is on remote
   copy:
     dest: /root/authelia-config/smtp_password.password
-    content: "{{ smtp_password }}"
+    content: "{{ portainer_notifications.smtp_password }}"
     mode: "0600"
 
 - name: Ensure Authelia Docker container is running
@@ -52,7 +52,7 @@
     restart_policy: unless-stopped
     labels:
       traefik.enable: "true"
-      traefik.http.routers.authelia.rule: "Host(`authelia.{{ root_domain }}`)"
+      traefik.http.routers.authelia.rule: "Host(`authelia.{{ portainer_root_domain }}`)"
       traefik.http.routers.authelia.entrypoints: "web-secure"
       traefik.http.routers.authelia.tls: "true"
       traefik.http.services.authelia.loadbalancer.server.port: "9091"
