--- a/tasks/traefik.yml
+++ b/tasks/traefik.yml
@@ -1,39 +1,49 @@
 ---
 - name: Ensure traefik static config is on remote
   ansible.builtin.template:
-    src: ./templates/traefik-static.yaml.j2
+    src: traefik-static.yaml.j2
     dest: /root/traefik-static.yaml
     mode: "0644"
 
 - name: Ensure traefik dynamic config is on remote
   ansible.builtin.template:
-    src: ./templates/traefik-dynamic.yaml.j2
+    src: traefik-dynamic.yaml.j2
     dest: /root/traefik-dynamic.yaml
     mode: "0644"
 
-- name: Ensure proxmox certificate is on remote
+- name: Ensure additional certificates are on remote
   copy:
-    dest: /root/cert-proxmox.crt
-    content: "{{ cert_proxmox_backup }}"
+    dest: /root/{{ item.file }}
+    content: "{{ item.cert }}"
     mode: "0600"
+  with_items: "{{ portainer_traefik.additional_certs }}"
 
-- name: Ensure cloudflare origin certificate is on remote
-  copy:
-    dest: /root/tbrouwer-cloudflare-origin.cert
-    content: "{{ cloudflare_origin_cert }}"
-    mode: "0600"
+# - name: Ensure proxmox certificate is on remote
+#   copy:
+#     dest: /root/cert-proxmox.crt
+#     content: "{{ cert_proxmox_backup }}"
+#     mode: "0600"
 
-- name: Ensure cloudflare origin key is on remote
-  copy:
-    dest: /root/tbrouwer-cloudflare-origin.key
-    content: "{{ cloudflare_origin_key }}"
-    mode: "0600"
+# - name: Ensure cloudflare origin certificate is on remote
+#   copy:
+#     dest: /root/tbrouwer-cloudflare-origin.cert
+#     content: "{{ cloudflare_origin_cert }}"
+#     mode: "0600"
+
+# - name: Ensure cloudflare origin key is on remote
+#   copy:
+#     dest: /root/tbrouwer-cloudflare-origin.key
+#     content: "{{ cloudflare_origin_key }}"
+#     mode: "0600"
 
 - name: Ensure web network for Traefik is present
   docker_network:
     name: web-secure
     internal: false
     state: present
+
+- ansible.builtin.debug:
+  msg: "{{ default_volumes + portainer_traefik.additional_volumes }}"
 
 - name: Ensure Traefik reverse proxy Docker container is running
   community.docker.docker_container:
@@ -48,10 +58,10 @@
     restart_policy: unless-stopped
     networks:
       - name: web-secure
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-      - /root/traefik-static.yaml:/etc/traefik/static.yaml
-      - /root/traefik-dynamic.yaml:/etc/traefik/dynamic.yaml
-      - /root/cert-proxmox.crt:/root/cert-proxmox.crt:ro
-      - /root/tbrouwer-cloudflare-origin.cert:/root/tbrouwer-cloudflare-origin.cert:ro
-      - /root/tbrouwer-cloudflare-origin.key:/root/tbrouwer-cloudflare-origin.key:ro
+    volumes: "{{ default_volumes + portainer_traefik.additional_volumes }}"
+      # - /var/run/docker.sock:/var/run/docker.sock
+      # - /root/traefik-static.yaml:/etc/traefik/static.yaml
+      # - /root/traefik-dynamic.yaml:/etc/traefik/dynamic.yaml
+      # - /root/cert-proxmox.crt:/root/cert-proxmox.crt:ro
+      # - /root/tbrouwer-cloudflare-origin.cert:/root/tbrouwer-cloudflare-origin.cert:ro
+      # - /root/tbrouwer-cloudflare-origin.key:/root/tbrouwer-cloudflare-origin.key:ro
