--- a/tasks/authelia.yml
+++ b/tasks/authelia.yml
@@ -12,25 +12,25 @@
     mode: "0644"
 
 - name: Ensure authelia jwt secret is on remote
-  copy:
+  ansible.builtin.copy:
     dest: /root/authelia-config/authelia_jwt_secret.key
     content: "{{ portainer_authelia.jwt_secret }}"
     mode: "0600"
 
 - name: Ensure authelia session secret is on remote
-  copy:
+  ansible.builtin.copy:
     dest: /root/authelia-config/authelia_session_secret.key
     content: "{{ portainer_authelia.session_secret }}"
     mode: "0600"
 
 - name: Ensure authelia storage secret is on remote
-  copy:
+  ansible.builtin.copy:
     dest: /root/authelia-config/authelia_storage_secret.key
     content: "{{ portainer_authelia.storage_secret }}"
     mode: "0600"
 
 - name: Ensure authelia smtp password is on remote
-  copy:
+  ansible.builtin.copy:
     dest: /root/authelia-config/smtp_password.password
     content: "{{ portainer_notifications.smtp_password }}"
     mode: "0600"
@@ -42,8 +42,8 @@
     volumes:
       - /root/authelia-config:/config
     command:
-      - "authelia"
-      - "--config=/config/configuration.yaml"
+      - authelia
+      - --config=/config/configuration.yaml
     env:
       AUTHELIA_JWT_SECRET_FILE: /config/authelia_jwt_secret.key
       AUTHELIA_SESSION_SECRET_FILE: /config/authelia_session_secret.key
@@ -52,11 +52,11 @@
     restart_policy: unless-stopped
     labels:
       traefik.enable: "true"
-      traefik.http.routers.authelia.rule: "Host(`authelia.{{ portainer_root_domain }}`)"
-      traefik.http.routers.authelia.entrypoints: "web-secure"
+      traefik.http.routers.authelia.rule: Host(`authelia.{{ portainer_root_domain }}`)
+      traefik.http.routers.authelia.entrypoints: web-secure
       traefik.http.routers.authelia.tls: "true"
       traefik.http.services.authelia.loadbalancer.server.port: "9091"
     networks:
       - name: web-secure
     healthcheck:
-      test: ["NONE"]
+      test: [NONE]
