--- a/tasks/dashy.yml
+++ b/tasks/dashy.yml
@@ -11,8 +11,8 @@
     image: tychobrouwer/dashy-tychobrouwer
     labels:
       traefik.enable: "true"
-      traefik.http.routers.dashy.rule: "Host(`dash.{{ portainer_root_domain }}`)"
-      traefik.http.routers.dashy.entrypoints: "web-secure"
+      traefik.http.routers.dashy.rule: Host(`dash.{{ portainer_root_domain }}`)
+      traefik.http.routers.dashy.entrypoints: web-secure
       traefik.http.routers.dashy.tls: "true"
     state: started
     # ports:
