--- a/vars/main.yml
+++ b/vars/main.yml
@@ -22,7 +22,7 @@ portainer_authelia:
 portainer_cloudflare_api_key: ""
 
 portainer_grafana:
-  admin_user: "admin"
+  admin_user: admin
   admin_password: ""
 
 portainer_influxdb:
