--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,6 +1,6 @@
 ---
 # vars file for ansible-portainer
-docker_ce_deb_repo: deb https://download.docker.com/linux/debian bookworm stable
+docker_ce_deb_repo: deb https://download.docker.com/linux/debian {{ ansible_distribution_release }} stable
 docker_ce_deb_gpg: https://download.docker.com/linux/debian/gpg
 
 portainer_root_domain: example.com
