--- a/tasks/watchtower.yml
+++ b/tasks/watchtower.yml
@@ -3,6 +3,8 @@
   community.docker.docker_container:
     name: watchtower
     image: containrrr/watchtower:latest
+    labels:
+      com.centurylinklabs.watchtower.enable: "false"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     env:
