--- a/vars/main.yml
+++ b/vars/main.yml
@@ -3,52 +3,8 @@
 docker_ce_deb_repo: deb https://download.docker.com/linux/debian {{ ansible_distribution_release }} stable
 docker_ce_deb_gpg: https://download.docker.com/linux/debian/gpg
 
-portainer_root_domain: example.com
-
-portainer_notifications:
-  smtp_username: ""
-  smtp_password: ""
-  smtp_host: ""
-
-portainer_authelia:
-  jwt_secret: ""
-  session_secret: ""
-  storage_secret: ""
-  user_name: ""
-  user_password: ""
-  user_email: ""
-  display_name: ""
-
-portainer_cloudflare_api_key: ""
-
-portainer_grafana:
-  admin_user: admin
-  admin_password: ""
-
-portainer_influxdb:
-  password: ""
-  secret: ""
-
-portainer_passbolt:
-  mariadb_root_password: ""
-  mariadb_database_password: ""
-  description: ""
-  user_email: ""
-  user_surname: ""
-  user_name: ""
-
 portainer_traefik:
-  additional_certs:
-    - file: cert-proxmox.crt
-      cert: "............"
-    - file: tbrouwer-cloudflare-origin.cert
-      cert: "............"
-    - file: tbrouwer-cloudflare-origin.key
-      cert: "............"
   default_volumes:
     - /var/run/docker.sock:/var/run/docker.sock
-    - /root/traefik-static.yaml:/etc/traefik/static.yaml
-    - /root/traefik-dynamic.yaml:/etc/traefik/dynamic.yaml
-
-portainer_dashy:
-  description: ""
+    - /root/traefik-static.yaml:/etc/traefik/static.yaml:ro
+    - /root/traefik-dynamic.yaml:/etc/traefik/dynamic.yaml:ro
