--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,7 +1,7 @@
 ---
 # vars file for ansible-portainer
-docker_ce_deb_repo: deb https://download.docker.com/linux/debian {{ ansible_distribution_release }} stable
-docker_ce_deb_gpg: https://download.docker.com/linux/debian/gpg
+portainer_docker_ce_deb_repo: deb https://download.docker.com/linux/debian {{ ansible_distribution_release }} stable
+portainer_docker_ce_deb_gpg: https://download.docker.com/linux/debian/gpg
 
 portainer_traefik:
   default_volumes:
