add missing variables

--- a/vars/main.yml
+++ b/vars/main.yml
@@ -12,3 +12,13 @@ portainer_traefik:
 portainer_authelia_config_template_path: authelia-config.yaml.j2
 portainer_dashy_config_template_path: dashy-conf.yaml.j2
 portainer_traefik_dynamic_template_path: traefik-dynamic.yaml.j2
+
+traefik_enabled: true
+portainer_enabled: true
+dashy_enabled: true
+cloudflare_ddns_enabled: true
+influxdb_enabled: true
+grafana_enabled: true
+passbolt_enabled: true
+watchtower_enabled: true
+authelia_enabled: true
