--- a/tasks/traefik.yml
+++ b/tasks/traefik.yml
@@ -22,7 +22,7 @@
 - name: Get templates from remote
   ansible.builtin.fetch:
     src: /root/{{ item }}
-    dest: /tmp/{{ item }}
+    dest: /tmp
   with_items:
     - authelia-config.yaml
     - dashy-conf.yaml
@@ -30,7 +30,7 @@
 
 - name: Get other configs on remote
   ansible.builtin.template:
-    src: /tmp/{{ item.name }}
+    src: /tmp/portainer/root/{{ item.name }}
     dest: "{{ item.dest }}"
     mode: "0644"
     owner: root
