--- a/vars/main.yml
+++ b/vars/main.yml
@@ -3,11 +3,10 @@
 portainer_docker_ce_deb_repo: deb https://download.docker.com/linux/debian {{ ansible_distribution_release }} stable
 portainer_docker_ce_deb_gpg: https://download.docker.com/linux/debian/gpg
 
-portainer_traefik:
-  default_volumes:
-    - /var/run/docker.sock:/var/run/docker.sock
-    - /root/traefik-static.yaml:/etc/traefik/static.yaml:ro
-    - /root/traefik-dynamic.yaml:/etc/traefik/dynamic.yaml:ro
+portainer_traefik_default_volumes:
+  - /var/run/docker.sock:/var/run/docker.sock
+  - /root/traefik-static.yaml:/etc/traefik/static.yaml:ro
+  - /root/traefik-dynamic.yaml:/etc/traefik/dynamic.yaml:ro
 
 traefik_enabled: true
 portainer_enabled: true
