--- a/tasks/passbolt.yml
+++ b/tasks/passbolt.yml
@@ -10,10 +10,10 @@
     labels:
       watchtower.enable: "false"
     env:
-      MYSQL_ROOT_PASSWORD: "{{ portainer_passbolt.mariadb_root_password }}"
+      MYSQL_ROOT_PASSWORD: "{{ portainer_passbolt_private.mariadb_root_password }}"
       MYSQL_DATABASE: passbolt
       MYSQL_USER: passbolt
-      MYSQL_PASSWORD: "{{ portainer_passbolt.mariadb_database_password }}"
+      MYSQL_PASSWORD: "{{ portainer_passbolt_private.mariadb_database_password }}"
     volumes:
       - database_volume:/var/lib/mysql
     restart_policy: unless-stopped
@@ -39,7 +39,7 @@
       DATASOURCES_DEFAULT_PORT: "3306"
       DATASOURCES_DEFAULT_DATABASE: passbolt
       DATASOURCES_DEFAULT_USERNAME: passbolt
-      DATASOURCES_DEFAULT_PASSWORD: "{{ portainer_passbolt.mariadb_database_password }}"
+      DATASOURCES_DEFAULT_PASSWORD: "{{ portainer_passbolt_private.mariadb_database_password }}"
       EMAIL_TRANSPORT_DEFAULT_HOST: "{{ portainer_notifications.smtp_host }}"
       EMAIL_TRANSPORT_DEFAULT_PORT: "587"
       EMAIL_TRANSPORT_DEFAULT_USERNAME: "{{ portainer_notifications.smtp_username }}"
@@ -68,7 +68,7 @@
     user: www-data
     command: >
       /usr/share/php/passbolt/bin/cake passbolt register_user
-      -u {{ portainer_passbolt.user_email }}
+      -u {{ portainer_passbolt_private.user_email }}
       -f {{ portainer_passbolt.user_name }}
       -l {{ portainer_passbolt.user_surname }}
       -r admin
