--- a/tasks/authelia.yml
+++ b/tasks/authelia.yml
@@ -1,8 +1,18 @@
 ---
+- name: Save password
+  ansible.builtin.copy:
+    dest: /root/authelia-config/password
+    content: "{{ portainer_authelia.user_password }}"
+    mode: "0600"
+    owner: root
+    group: root
+  register: password_file
+
 - name: Generate password hash
   ansible.builtin.command: >
     docker run --name temp authelia/authelia:latest
-    authelia crypto hash generate argon2 --password '{{ portainer_authelia.user_password }}'
+    authelia crypto hash generate argon2 --password '{{ portainer_authelia.user_password }}' --no-confirm
+  when: password_file.changed
   register: password_hash
   changed_when: false
 
@@ -12,10 +22,23 @@
     state: absent
     keep_volumes: false
   changed_when: false
+  when: password_file.changed
 
 - name: Set password hash
   ansible.builtin.set_fact:
     portainer_authelia_password_hash: "{{ password_hash.stdout | regex_replace('Digest: ', '') }}"
+  when: password_file.changed
+
+- name: Get password hash
+  ansible.builtin.slurp:
+    src: /root/authelia-config/users_database.yaml
+  when: not password_file.changed
+  register: users_database_file
+
+- name: Set password hash
+  ansible.builtin.set_fact:
+    portainer_authelia_password_hash: "{{ users_database_file.stdout | regex_search('password: (.*)') | regex_replace('password: ', '') }}"
+  when: not password_file.changed
 
 - name: Ensure authelia user database is on remote
   ansible.builtin.template:
@@ -37,46 +60,6 @@
     - { file: authelia_session_secret.key, content: "{{ portainer_authelia.session_secret }}" }
     - { file: authelia_storage_secret.key, content: "{{ portainer_authelia.storage_secret }}" }
     - { file: smtp_password.password, content: "{{ portainer_notifications.smtp_password }}" }
-
-# - name: Ensure authelia config is on remote
-#   ansible.builtin.template:
-#     src: authelia-config.yaml.j2
-#     dest: /root/authelia-config/configuration.yaml
-#     mode: "0644"
-#     owner: root
-#     group: root
-
-# - name: Ensure authelia jwt secret is on remote
-#   ansible.builtin.copy:
-#     dest: /root/authelia-config/authelia_jwt_secret.key
-#     content: "{{ portainer_authelia.jwt_secret }}"
-#     mode: "0600"
-#     owner: root
-#     group: root
-
-# - name: Ensure authelia session secret is on remote
-#   ansible.builtin.copy:
-#     dest: /root/authelia-config/authelia_session_secret.key
-#     content: "{{ portainer_authelia.session_secret }}"
-#     mode: "0600"
-#     owner: root
-#     group: root
-
-# - name: Ensure authelia storage secret is on remote
-#   ansible.builtin.copy:
-#     dest: /root/authelia-config/authelia_storage_secret.key
-#     content: "{{ portainer_authelia.storage_secret }}"
-#     mode: "0600"
-#     owner: root
-#     group: root
-
-# - name: Ensure authelia smtp password is on remote
-#   ansible.builtin.copy:
-#     dest: /root/authelia-config/smtp_password.password
-#     content: "{{ portainer_notifications.smtp_password }}"
-#     mode: "0600"
-#     owner: root
-#     group: root
 
 - name: Ensure Authelia Docker container is running
   community.docker.docker_container:
